--- a/WPF_MVVM2/MainWindow.xaml
+++ b/WPF_MVVM2/MainWindow.xaml
@@ -7,18 +7,41 @@
         mc:Ignorable="d"
         Name="window"
         Title="MainWindow" Height="500" Width="525">
-    <StackPanel>
-        <ListBox ItemsSource="{Binding People}" Width="300" Height="300">
-            <ListBox.ItemTemplate>
-                <DataTemplate>
-                    <StackPanel Orientation="Horizontal">
-                        <TextBlock Text="{Binding Name}"/>
-                        <TextBlock Text="{Binding Age}" Margin="10,0,0,0"/>
-                    </StackPanel>
-                </DataTemplate>
-            </ListBox.ItemTemplate>
-        </ListBox>
-        <Button Content="UseList" Width="100" Height="50" Command="{Binding UseListUpdateCmd}"/>
-        <Button Content="UseObs" Width="100" Height="50" Command="{Binding UseObsUpdateCmd}"/>
-    </StackPanel>
+    <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        
+        <StackPanel>
+            <TextBlock Text="Itmes is List" HorizontalAlignment="Center"/>
+            <ListBox ItemsSource="{Binding People_List}" Width="300" Height="300">
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Text="{Binding Name}"/>
+                            <TextBlock Text="{Binding Age}" Margin="10,0,0,0"/>
+                        </StackPanel>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+            </ListBox>
+            <Button Content="UseList" Width="100" Height="50" Command="{Binding UseListUpdateCmd}"/>
+        </StackPanel>
+        
+        <StackPanel Grid.Column="1">
+            <TextBlock Text="Itmes is ObservableCollection" HorizontalAlignment="Center"/>
+            <ListBox ItemsSource="{Binding People_Obs}" Width="300" Height="300">
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Text="{Binding Name}"/>
+                            <TextBlock Text="{Binding Age}" Margin="10,0,0,0"/>
+                        </StackPanel>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+            </ListBox>
+            <Button Content="UseObs" Width="100" Height="50" Command="{Binding UseObsUpdateCmd}"/>
+        </StackPanel>
+    </Grid>
+
 </Window>
